# vaulty

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html  vaulty-archive-key.asc
.github/workflows/: release.yml
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
dists/stable/main/binary-arm64/: Packages
packaging/: README.md
packaging/arch/: PKGBUILD
pool/main/v/vaulty/: vaulty_0.1.1_amd64.deb  vaulty_0.1.1_arm64.deb
rpm/x86_64/: vaulty-0.1.1-1.fc40.x86_64.rpm
rpm/x86_64/repodata/: 49032bd0fec72edc64cf63981ddd49ecd75449d76ab7987613de85f00b0c64b9-other.xml.zst  66f39203e59fc29ea27a738124d5225872d3b90e3e9f4850e7362b8966be6a77-primary.xml.zst  fe55d268bc1caf32ac36cdb7c75e5c78ab91ded05b1d01692948c1bbb2eabc51-filelists.xml.zst  repomd.xml
scripts/: install.ps1  install.sh  package-deb.sh  package-release.sh  package-rpm.sh  setup-apt.sh
src/: app.rs  crypto.rs  lib.rs  models.rs  storage.rs  ui.rs
