[package]
name = "terminal-vault"
version = "0.1.1"
edition = "2024"
default-run = "vaulty"
description = "Vaulty: local-first terminal password and notes vault"

[[bin]]
name = "vaulty"
path = "src/bin/vaulty.rs"

[[bin]]
name = "terminal-vault"
path = "src/main.rs"

[package.metadata.deb]
name = "vaulty"
maintainer = "Vaulty Maintainers <maintainers@example.com>"
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
  ["target/release/vaulty", "usr/bin/vaulty", "755"],
  ["README.md", "usr/share/doc/vaulty/README.md", "644"],
  ["CHANGELOG.md", "usr/share/doc/vaulty/CHANGELOG.md", "644"],
]
extended-description = """\
Vaulty is a local-first terminal vault for credentials and notes.
Data is encrypted at rest and managed entirely from the terminal UI.
"""

[dependencies]
anyhow = "1"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.8"
rand_core = "0.6"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
dirs = "5"
zeroize = { version = "1", features = ["zeroize_derive"] }
keyring = "2"
arboard = "3"
crossterm = "0.27"
ratatui = "0.27"
tempfile = "3"
tui-big-text = "0.5"
